Fixes the Border radius Issues and Newsletter Alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1043,7 +1043,7 @@ footer {
   height: 15vh;
   width: 100%;
   color: white;
-  margin-top: 5rem;
+  /* margin-top: 5rem; */
 }
 
 footer a {
@@ -3926,7 +3926,7 @@ footer {
   height: 15vh;
   width: 100%;
   color: white;
-  margin-top: 5rem;
+  /* margin-top: 5rem; */
 }
 
 footer a {
@@ -6736,7 +6736,7 @@ footer a:hover {
 footer {
   width: 100%;
   color: white;
-  margin-top: 5rem;
+  /* margin-top: 5rem; */
 }
 
 footer a {
@@ -9656,6 +9656,7 @@ button,
   z-index: 2;
   transition: 0.5s all;
   opacity: 0;
+  border-radius: 2rem;
 }
 
 .cardEx:hover:before {
@@ -9669,6 +9670,7 @@ button,
   position: absolute;
   top: 0;
   left: 0;
+  border-radius: 2rem;
 }
 
 .cardEx .info {
@@ -9949,6 +9951,7 @@ img {
   padding: 20px 100px;
   margin: 60px 0;
   margin-top: 120px;
+  margin-bottom: -1.5rem;
 }
 
 #newsletter .news-text h4 {
@@ -10815,6 +10818,7 @@ form {
   width: 60%;
   height: 100%;
   object-fit: cover;
+  border-radius: 2rem;
 }
 
 .container1 .about-image {
